# Foodpicker

./: Cargo.toml  README.md
.github/workflows/: ci.yml
.sqlx/: query-68112e78d77ccc118af1cc910b63bae2923289202345c36d6328a1c299d44e26.json  query-9a87193354875cd01ab927ce50dead1c3b910c498f598f0d46ad8d627271daee.json  query-c09c424906120eddece305bc006e664f70b63a40b7e831c450b124b5591bd2bc.json  query-c6d65fa2d81336ebf9a85aa9ba490642763905994b695bb1203cb6cb5e4f132c.json
src/: food_choice.rs  main.rs  maps.rs  postgres.sql  queries.rs  webpage.rs
src/frontend/: index.html  index.liquid  maps.liquid
