[package]
name = "food-picker"
version = "0.1.0"
authors = ["Marion Hinkel <marion@fauxia.de>"]
license = "GPLv3"
readme = "README.md"
edition = "2021"

[dependencies]
color-eyre = "0.6.2"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
dotenvy = "0.15.7"
sqlx = { version = "0.6.3", features = ["postgres", "runtime-tokio-rustls"] }