[package]
name = "food-picker"
version = "0.1.0"
authors = ["Marion Hinkel <marion@fauxia.de>"]
license = "GPLv3"
readme = "README.md"
edition = "2021"

[dependencies]
color-eyre = "0.6.2"
tracing = "0.1.40"
serde = "1.0.196"
tracing-subscriber = "0.3.18"
dotenvy = "0.15.7"
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-rustls"] }
tokio = { version = "1.36.0", features = ["full"] }
liquid = "0.26.4"
actix-web = "4.5.1"
google_maps = { version= "3.4.1", features= ["rustls", "tokio", "places"] }
serde_json = "1.0"
rand = "0.8.5"